--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-watch": "^2.0.7",
+    "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.7.0",
     "nodemon": "^1.17.3"
   },
   "dependencies": {
